added role & active status
